Add metadata reading and column renaming to data preprocessing

--- a/Celebrity Look a Like CNN DL Project.ipynb
+++ b/Celebrity Look a Like CNN DL Project.ipynb
@@ -27,7 +27,9 @@
     "<br>\n",
     "* [Disabling Warnings and Limiting GPU Usage](#warn)\n",
     "<br>\n",
-    "* [Data Preprocessing](#dataset)"
+    "* [Data Preprocessing](#dataset)\n",
+    "<br>\n",
+    "    * [Reading Meta Data](#metadata)"
    ]
   },
   {
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +82,6 @@
     "from keras.models import Model, Sequential\n",
     "from keras import metrics\n",
     "from keras.models import model_from_json\n",
-    "from keras import backend as K\n",
     "\n",
     "\n",
     "# Sklearn train test split function\n",
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,27 +105,43 @@
     "def warn(*args, **kwargs):\n",
     "    pass\n",
     "\n",
-    "warnings.warn = warn"
+    "\n",
+    "warnings.warn = warn\n",
+    "\n",
+    "# Setting the current directory path\n",
+    "path = os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num GPUs Available:  []\n"
+     ]
+    }
+   ],
    "source": [
     "# Setting the second GPU as the default GPU for training\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "\n",
     "# Setting the configuration of the GPU\n",
-    "config = tf.ConfigProto()\n",
-    "\n",
-    "# Allowing the GPU memory to grow to prevent memory overflow\n",
-    "config.gpu_options.allow_growth = True\n",
+    "gpus = tf.config.experimental.list_physical_devices(\"GPU\")\n",
+    "print(\"Num GPUs Available: \", gpus)\n",
+    "if gpus:\n",
+    "    try:\n",
+    "        tf.config.experimental.set_visible_devices(gpus[1], \"GPU\")\n",
+    "        tf.config.experimental.set_memory_growth(gpus[1], True)\n",
+    "    except RuntimeError as e:\n",
+    "        print(e)\n",
     "\n",
     "# Setting the session with the above configuration\n",
-    "session = tf.Session(config=config)\n",
-    "K.set_session(session)"
+    "sess = tf.compat.v1.Session()\n",
+    "tf.compat.v1.keras.backend.set_session(sess)"
    ]
   },
   {
@@ -133,6 +150,101 @@
    "metadata": {},
    "source": [
     "## Data Preprocessing <a id='dataset'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading Meta Data <a id='metadata'></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading the mat file containing the data\n",
+    "data_mat = scipy.io.loadmat(path + \"/Data/imdb_crop/imdb_crop/imdb.mat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total no. of records:  460723\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Getting the total number of records in the data\n",
+    "records = data_mat[\"imdb\"][0][0][0].shape[1]\n",
+    "print(\"Total no. of records: \", records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total no. of features:  10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Getting the column names of the data\n",
+    "features = data_mat[\"imdb\"][0][0].dtype\n",
+    "features = list(features.names)\n",
+    "print(\"Total no. of features: \", len(features))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Features Names:\n",
+      " ['dob', 'photo_taken', 'full_path', 'gender', 'name', 'face_location', 'face_score', 'second_face_score', 'celeb_names', 'celeb_id']\n",
+      "New Features Names:\n",
+      " ['Date of Birth', 'Photo Taken Date', 'Full Img Path', 'Gender', 'Celebrity Name', 'Face Location', 'Face Score', 'Second Face Score', 'Celeb Names', 'Celeb ID']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rename the columns of the data\n",
+    "print(\"Current Features Names:\\n\", features)\n",
+    "features[0] = \"Date of Birth\"\n",
+    "features[1] = \"Photo Taken Date\"\n",
+    "features[2] = \"Full Img Path\"\n",
+    "features[3] = \"Gender\"\n",
+    "features[4] = \"Celebrity Name\"\n",
+    "features[5] = \"Face Location\"\n",
+    "features[6] = \"Face Score\"\n",
+    "features[7] = \"Second Face Score\"\n",
+    "features[8] = \"Celeb Names\"\n",
+    "features[9] = \"Celeb ID\"\n",
+    "print(\"New Features Names:\\n\", features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Data Frame <a id='dataframe'></a>"
    ]
   }
  ],
